--- a/lang/en.json
+++ b/lang/en.json
@@ -1,64 +1,64 @@
 {
-    "appName": "Diario Pressorio",
-    "addValue": "Aggiungi Misurazione",
-    "updateValue": "Aggiorna Misurazione",
-    "deleteValue": "Elimina Misurazione",
-    "historyValues": "Storico Misurazioni",
-    "settings": "Impostazioni",
+    "appName": "Blood Pressure Log",
+    "addValue": "Add Measurement",
+    "updateValue": "Update Measurement",
+    "deleteValue": "Delete Measurement",
+    "historyValues": "Historical Measurements",
+    "settings": "Settings",
 
-    "filter": "FILTRA PER",
-    "week": "SETTIMANA",
-    "month": "MESE",
-    "year": "ANNO",
-    "all": "SEMPRE",
+    "filter": "FILTER BY",
+    "week": "WEEK",
+    "month": "MONTH",
+    "year": "YEAR",
+    "all": "ALL",
 
     "note": "Note",
 
-    "informationDateTime": "Le presenti misurazioni sono state stampate il: ",
+    "informationDateTime": "These measurements were printed on: ",
 
-    "exportMeasurements": "Esporta Misurazioni",
-    "importMeasurements": "Importa Misurazioni",
+    "exportMeasurements": "Export Measurements",
+    "importMeasurements": "Import Measurements",
 
-    "measurements": "Misurazioni",
-    "dateMeasurement": "Data Misurazione",
+    "measurements": "Measurements",
+    "dateMeasurement": "Measurement Date",
 
-    "requestedField": "Campo Richiesto",
-    "confirm": "CONFERMA",
-    "success": "Operazione Completata",
-    "insertConfirmation": "Il dato richiesto è stato inserito correttamente",
-    "updateConfirmation": "Il dato richiesto è stato aggiornato correttamente",
+    "requestedField": "Required Field",
+    "confirm": "CONFIRM",
+    "success": "Operation Completed Successfully",
+    "insertConfirmation": "The requested data has been entered correctly",
+    "updateConfirmation": "The requested data has been updated correctly",
 
-    "avgValues": "Media dei Valori Rilevati",
-    "graphVariation": "Grafico della Variazione dei Valori",
-    "graphOccurrences": "Grafico delle Occorrenze delle misurazioni",
+    "avgValues": "Average of the detected values",
+    "graphVariation": "Graph of the Variation of Values",
+    "graphOccurrences": "Measurement Occurrences Chart",
 
-    "noValuesDetected": "Nessuna misurazione rilevata",
-    "noValuesDetectedDetail": "Per aggiungerne una misurazione fare click su Aggiungi",
+    "noValuesDetected": "No measurement detected",
+    "noValuesDetectedDetail": "To add a measurement click on Add",
 
     "lblSYS": "SYS",
     "lblDIA": "DIA",
     "lblBPM": "BPM",
     
     "home": "Home",
-    "add": "Aggiungi",
-    "history": "Cronologia",
+    "add": "Add",
+    "history": "History",
 
-    "selectDateTime": "Seleziona Data e Ora",
+    "selectDateTime": "Select Date and Time",
 
-    "hypotension": "Ipotensione",
-    "regular": "Regolare",
-    "elevated": "Elevata",
-    "hypertensionstage1": "Ipertensione di primo stadio",
-    "hypertensionstage2": "Ipertensione di secondo stadio",
-    "hypertensivecrisis": "Crisi Ipertensiva",
+    "hypotension": "Hypotension",
+    "regular": "Regular",
+    "elevated": "Elevated",
+    "hypertensionstage1": "First stage hypertension",
+    "hypertensionstage2": "Second stage hypertension",
+    "hypertensivecrisis": "Hypertensive crisis",
 
-    "sys": "Sistolica",
-    "dia": "Diastolica",
-    "bpm": "Pulsazione",
+    "sys": "Systolic",
+    "dia": "Diastolic",
+    "bpm": "Heartbeat",
 
-    "instruction": "Come funziona l'app",
-    "rateApp": "Ti piace l'app? Valutaci 5 stelle",
-    "myApp": "Le nostre app",
+    "instruction": "How the app works",
+    "rateApp": "Do you like the app? Rate us 5 stars",
+    "myApp": "Our apps",
 
     "onBoarding1Detail": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nisl odio, fermentum in luctus vitae, faucibus a est. Maecenas ut vulputate mi. Nulla ullamcorper dui in velit cursus, eget aliquam risus iaculis. In consequat eget lacus nec dictum. Praesent luctus vitae est ac porta. Donec vel ultrices diam. Cras placerat ante odio, a convallis quam accumsan eu. Nunc venenatis dolor arcu, ac blandit magna ullamcorper sit amet. Pellentesque rhoncus maximus nunc id facilisis. Integer sit amet eros id elit efficitur viverra a in ipsum. Integer tincidunt scelerisque ipsum, sed auctor turpis mattis ut. Donec nec ex non dolor ornare condimentum a eget purus. Aliquam blandit gravida massa, ac auctor velit sollicitudin eu. Nam rhoncus erat vitae massa pulvinar pulvinar",
     "onBoarding2": "Seconda Parte",
